# operator_learning

./: .gitignore  pyproject.toml
examples/lorenz63/: kernel_benchmark.py
src/operator_learning/: linalg.py  structs.py  utils.py
src/operator_learning/kernel/: base.py  principal_component.py  principal_components.py  reduced_rank.py
src/operator_learning/nn/: functional.py
