[project]
name = "operator-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pietro Novelli", email = "pietronvll@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.12",
    "torch>=2.0",
]

[project.scripts]
operator-learning = "operator_learning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.0",
]
